--- a/src/index.css
+++ b/src/index.css
@@ -96,8 +96,11 @@ body {
 }
 
 .main {
+  width: 100%;
   height: 500px;
   background-image: url(./src/assets/images/background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .main-content {
   font-size: 60px;
@@ -161,21 +164,27 @@ body {
   text-align: left;
   display: block;
 }
+.for-blog {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.blog-h3 {
+  font-size: 15px;
+}
 .blog-title {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
 }
 .blog-text {
   width: 50%;
   justify-content: space-between;
-  padding-left: 0px;
+  padding-left: 20px;
   display: flex;
   flex-direction: column;
 }
 .blog-main {
-  display: grid;
-  grid-template-columns: (2, 1fr);
-  grid-template-rows: (2, 1fr);
+  gap: 15px;
+  padding-top: 40px;
 }
 
 a {
