--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,9 @@ body {
   align-items: center;
   padding-top: 30px;
 }
+.hamburger-menu {
+  display: none;
+}
 .header-content {
   display: flex;
   list-style-type: none;
@@ -96,7 +99,6 @@ body {
 }
 
 .main {
-  width: 100%;
   height: 500px;
   background-image: url(./src/assets/images/background.jpg);
   background-repeat: no-repeat;
@@ -379,4 +381,58 @@ form a {
 .gray {
   padding-top: 30px;
   background-color: #f7f2ea;
+}
+@media screen and (max-width: 1000px) {
+  .types-content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .priortise-functionality {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hamburger-menu {
+    display: flex;
+  }
+  .header-nav {
+    display: none;
+  }
+  .main-content {
+    font-size: 35px;
+  }
+  .types-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .list-types-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .for-blog {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .know-more {
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+  }
+  .priortise-functionality {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .types-content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .priortise-functionality {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
